--- a/WebContent/bbbb.xhtml
+++ b/WebContent/bbbb.xhtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
@@ -9,17 +9,65 @@
 <h:head>
 	<title>TESTE TESTE</title>
 	<h:outputStylesheet name="product.css" library="css" />
+		<script type="text/javascript">
+	$(document).ready(function() {
+		$("div.panel_button").click(function(){
+			$("div#loginTop").animate({
+				height: "150"
+			})
+			.animate({
+				height: "120"
+			}, "fast");
+			$("div.panel_button").toggle();
+		
+		});	
+		
+	   $("div#hide_button").click(function(){
+			$("div#loginTop").animate({
+				height: "0px"
+			}, "fast");
+			
+		
+	   });	
+		
+	});
+	</script>
 </h:head>
 <h:body>
 
 
 	<p:layout fullPage="true">
-
+		<div id="topTop">
+			<div id="loginTop">
+				<p:messages ></p:messages>
+		  		<h:panelGrid columns="2" cellpadding="5">
+					<h:form id="form">
+						<h:outputLabel for="login" value="Email: " style="font-weight:bold"/>            
+	       				<p:inputText id="login" value="#{userBean.user.email}" />  
+	       				 <h:outputText value="#{userBean.user.firstName}" />
+	     				   <br/>
+	       				 <h:outputLabel for="password" value="Senha: " style="font-weight:bold"/>            
+	      				  <p:password id="password" value="#{userBean.user.password}" />  
+	       				 <h:outputText value="#{userBean.user.email}" />
+							<br/>
+						<p:commandButton value="Logar" update=":form" action="#{userBean.startSession}"/>    	
+					</h:form>
+				</h:panelGrid>  	
+			</div>
+		
+			<div class="panel_button" style="display: visible;"><img src="http://png.findicons.com/files/icons/2255/cologne/32/login.png"  alt="expand"/>    </div>
+			<div class="panel_button" id="hide_button" style="display: none;">
+			<img src="http://png.findicons.com/files/icons/131/software/32/cancel.png" alt="collapse" /> </div>
+			  
+		</div>
 		<p:layoutUnit position="north" size="100" header="Top"
 			resizable="true" closable="true" collapsible="true">
 			<h:outputText value="Top unit content." />
+			
+			
+			
 		</p:layoutUnit>
-
+		
 		<p:layoutUnit position="south" size="50" collapsible="true">
 			<h:outputText value="South unit content." />
 		</p:layoutUnit>
