--- a/WebContent/bbbb.xhtml
+++ b/WebContent/bbbb.xhtml
@@ -60,11 +60,11 @@
 			<img src="http://png.findicons.com/files/icons/131/software/32/cancel.png" alt="collapse" /> </div>
 			  
 		</div>
+		
+		
 		<p:layoutUnit position="north" size="100" header="Top"
-			resizable="true" closable="true" collapsible="true">
-			<h:outputText value="Top unit content." />
-			
-			
+			resizable="true">
+			<h:outputText value="Top unit content." />		
 			
 		</p:layoutUnit>
 		
